Simplificacao no output do console - Thales