@@ -1,6 +1,5 @@
 package org.example;
 
-import org.example.ClassesDAO.DatabaseConnection;
 import org.example.ClassesDAO.VoluntarioDAO;
 import org.example.Services.Autenticacao;
 
@@ -9,40 +8,36 @@ import java.util.List;
 
 public class Main {
     public static void testaCrudVoluntario() {
-        DatabaseConnection databaseConnection = new DatabaseConnection();
         VoluntarioDAO voluntarioDAO = new VoluntarioDAO();
 
-        // 1. Criar e inserir um voluntário
         Voluntario novoVoluntario = new Voluntario(
-                "Thales Martins",
-                "Austrália",
+                "Dorian Yates",
+                "Alemanha",
                 "05805705912",
                 LocalDate.of(2000, 3, 10),
                 "99999999998",
                 "Ensino Superior",
                 "Engenharia Aeroespacial",
                 "email@email.com",
-                "123456"
+                "senha"
         );
         voluntarioDAO.inserirVoluntario(novoVoluntario);
-        System.out.println("Voluntário inserido com sucesso!");
+        System.out.println("Inserindo voluntário...\nVoluntário inserido com sucesso!");
 
-        // 2. Buscar todos os voluntários
         List<Voluntario> voluntarios = voluntarioDAO.buscarTodosVoluntarios();
-        System.out.println("Lista de voluntários:");
+        System.out.println("Lista de voluntários após atualização:");
         for (Voluntario voluntario : voluntarios) {
             System.out.println(voluntario);
         }
 
-        /* 3. Atualizar um voluntário existente (vamos usar o primeiro da lista)
         if (!voluntarios.isEmpty()) {
-            Voluntario voluntarioParaAtualizar = voluntarios.get(0);
-            voluntarioParaAtualizar.setNomeCompleto("João Silva Atualizado");
-            voluntarioParaAtualizar.setEmail("joao.atualizado@example.com");
+            Voluntario voluntarioParaAtualizar = voluntarios.getFirst();
+            voluntarioParaAtualizar.setNomeCompleto("Tom Platz");
+            voluntarioParaAtualizar.setEmail("geleca@email.com");
             voluntarioDAO.atualizarVoluntario(voluntarioParaAtualizar);
-            System.out.println("Voluntário atualizado com sucesso!");
+            System.out.println("Atualizando informações do voluntário...\nVoluntário atualizado com sucesso!");
 
-            // Exibir o voluntário atualizado
+            // Exibir o voluntários após operação
             List<Voluntario> voluntariosAtualizados = voluntarioDAO.buscarTodosVoluntarios();
             System.out.println("Lista de voluntários após atualização:");
             for (Voluntario voluntario : voluntariosAtualizados) {
@@ -50,12 +45,18 @@ public class Main {
             }
         }
 
-         4. Excluir um voluntário (vamos excluir o primeiro da lista atualizada)
         if (!voluntarios.isEmpty()) {
-            Voluntario voluntarioParaExcluir = voluntarios.get(0);
+            Voluntario voluntarioParaExcluir = voluntarios.getFirst();
             voluntarioDAO.excluirVoluntario(voluntarioParaExcluir.getId());
-            System.out.println("Voluntário excluído com sucesso!");
-        }*/
+            System.out.println("Excluindo voluntário...\nVoluntário excluído com sucesso!");
+
+            // Exibir o voluntários após operação
+            List<Voluntario> voluntariosAtualizados = voluntarioDAO.buscarTodosVoluntarios();
+            System.out.println("Lista de voluntários após atualização:");
+            for (Voluntario voluntario : voluntariosAtualizados) {
+                System.out.println(voluntario);
+            }
+        }
     }
 
     public static void main(String[] args) {
@@ -63,13 +64,12 @@ public class Main {
 
         Autenticacao autenticacao = new Autenticacao();
 
-        // Exemplo de autenticação
         String email = "email@email.com";
-        String senha = "123456";
+        String senha = "senha";
 
         Voluntario usuarioAutenticado = autenticacao.autenticar(email, senha);
         if (usuarioAutenticado != null) {
-            System.out.println("Usuário autenticado com sucesso: " + usuarioAutenticado);
+            System.out.println("Autenticando voluntário...\nUsuário autenticado com sucesso: " + usuarioAutenticado);
         } else {
             System.out.println("Falha na autenticação: email ou senha inválidos.");
         }
